Interfacce del Customer divise in due file fxml separati. Interfaccia dello Chef abbellita da Domenico e funzionante. Problema nella lettura del menù quando si passa dall'interfaccia per prendere il numero di posti a quella per prendere gli ordini.